update readme and add default to git revision
Signed-off-by: Andrew Su <andrew.su.01@gmail.com>

--- a/tekton/trigger_template.yaml
+++ b/tekton/trigger_template.yaml
@@ -6,8 +6,12 @@ metadata:
 spec:
   params:
     - name: gitrevision
+      default: main
+      description: The git revsion to checkout and build, a branch or sha, default to main
     - name: gitrepositoryurl
+      description: The git repository url
     - name: registryurl
+      description: The registry url built images target
   resourcetemplates:
     - apiVersion: tekton.dev/v1alpha1
       kind: TaskRun
